added some stuff for chapter 3

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -250,6 +250,10 @@
 	howpublished = "\url{http://www.tandfonline.com/doi/full/10.1080/19475683.2013.868826#abstract}"
 }
 
+@MISC{ultra,
+	howpublished = "\url{http://www.micropik.com/PDF/HCSR04.pdf}"
+}
+
 @MISC{planetstemp,
 	author = {Lunar and Planetary Institute},
 	title = {Solar System Temperatures},
