--- a/report/sections/ch2-preliminary-research.tex
+++ b/report/sections/ch2-preliminary-research.tex
@@ -17,7 +17,7 @@ Either of those systems would not be beneficial for our project in space, since 
 	photographic images. This is done by comparing and matching pixels or reference points across a series
 	of photos."\cite{Photogrammetry}}
 
-As a simple example, the distance between two points that lie on a plane parallel to the photographic image plane can be determined by measuring their distance on the image, if the scale (s) of the image is known. This is done by multiplying the measured distance by $1/s$\cite{photo}.
+As a simple example, a map can be constructed from a series of images by overlaying them in such a way that the areas the pictures have in common overlap. The distance between two points that lie on a plane parallel to the photographic image plane can be determined by measuring their distance on the image, if the scale (s) of the image is known. This is done by multiplying the measured distance by $1/s$\cite{photo}.
 
 Algorithms for photogrammetry typically attempt to minimize the sum of the squares of errors over the coordinates and relative displacements of the reference points. This minimization is known as bundle adjustment and is often performed using the Levenberg–Marquardt algorithm\cite{photo}.
 
@@ -63,7 +63,7 @@ Image-based sensors are usually just cameras. %usually, just? not clear enough s
 A projected image sensor is very simple, %subjective? what?
  some known image is projected on the environment (a grid, for example), then a camera takes a picture. Since the projection is known, it is simple to detect the distance of an object on the image based on what the projection looks like. This method is limited to how fine the projected image is. %what qualifies a fine image?
 
-Stereoscopy is more complicated, but also more reliable. Two photos of the same scene, but from different vantage points, are taken. Small sections of one of the images are taken, and overlayed onto the other image. By finding the place on the other image where the small section fits, the algorithm can determine the depth of each pixel in that subsection. This procedure is repeated until the whole image has been processed.
+Stereoscopy, also known as stereophotogrammetry, is more complicated, but also more reliable. Two photos of the same scene, but from different vantage points, are taken. Small sections of one of the images are taken, and overlayed onto the other image. By finding the place on the other image where the small section fits, the algorithm can determine the depth of each pixel in that subsection. This procedure is repeated until the whole image has been processed.
 
 \subsubsection{Rangefinder}%NOTE: This section might be a little rambly
 A rangefinder is a device that measures the distance between itself, and a point some at a certain distance away from it. Rangefinders work based on the principle that the speed of an object is defined to be \textit{distance travelled over time travelled}, which means that the distance travelled is the speed of an object times the amount of time it travelled. To put this in math terms: \(v=d/t\) or \(d=t*v\).
