--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -26,3 +26,10 @@ Furthermore we decided to expand upon the problem-domain we set for ourselves an
 \end{figure}
 
 We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[scale=.1]{images/level1.png}
+	\caption{Flowchart of our first main ideas}
+	\label{fig:level1}
+\end{figure}
