--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -2,7 +2,7 @@
 
 This section outlines the requirements for both the prototype that we are aiming to achieve through this project, and the requirements for testing and evaluating it.
 
-\subsection{Prototype}
+\subsection{Prototype requirements}
 
 \begin{enumerate}
 	
@@ -10,6 +10,7 @@ This section outlines the requirements for both the prototype that we are aiming
 	\item The rover should be autonomous.
 	\item From the laser sensor we can make a 2D map of the surroundings.
 	\item Running a Raspberry Pi that controlled mapping and navigation at the same time.
+	\item The program should be written in Python.
 	\item The system should include a laser sensor.
 	\item The system should include an ultrasonic-sensor.
  	\item The prototype should be capable of implementing an 3D mapping sensor without much change.
