--- a/report/sections/ch3-problemanalysisconclusion.tex
+++ b/report/sections/ch3-problemanalysisconclusion.tex
@@ -1,15 +1,25 @@
 \section{Conclusion of Problem Analysis}
 
 During the research for this project, we have figured out what technologies we will use when solving our problem, that is stated in the W-diagram.
-We will be using a rover to navigate around with multiple sensors. Making a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will be using both sound and light sensors for navigation and mapping. Ultrasonic-sensors will be used for close encounter maneuvers for their high precision at a close range (up to 4m)\cite{ultra}. For mapping we will be using a laser sensor, that will either automatically turn 360$\deg$ or we will implement a motor to rotate the sensor.
-The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic-sensors. The control computer will be a Raspberry Pi running a Debian Unix operating system. The reason for using the Raspberry Pi is that it can multi-task, read many sensors at the same time and build the 2D map on the go. For other microcontrollers, like the Arduino, we would only be able to collect data and need to build the map from it later, using another computer.  
+We will be using a rover to navigate around with multiple sensors. Making a 2D map of its surroundings, with the possibility of implementing equipment for 3D mapping. We will be using both sound and light sensors for navigation and mapping. Ultrasonic-sensors will be used for close encounter maneuvers for their high precision at a close range (up to 4m)\cite{ultra}. For mapping we will be using a laser sensor, that will either automatically turn 360$^{\circ}$  or we will implement a motor to rotate the sensor.
+The rover will both be remote controlled and autonomous for navigation. For reference points we will be using the ultrasonic-sensors. The control computer will be a Raspberry Pi running a Debian Unix operating system. The reason for using the Raspberry Pi is that it can multi-task, read many sensors at the same time and build the 2D map on the go. For other microcontrollers, like the Arduino, we would only be able to collect data and need to build the map from it later, using another computer. 
 
-%TODO: Remove this at some points.
-%During the research for this project, we have figured out which technologies we will use when solving our problem statement. Through research we have looked at the different stakeholders and also taken into account the different health and safety measures and the environmental impact.
-%We will be using RFID to monitor and keep track of the different users of the locking system, for this project we will be using passive RFID, since this is the technology used in our student cards and other forms of ID cards. This will make it easy for us to integrate this system into working environments, where some sort of ID system already is in place. 
-%We gathered some data from the bicycle sheds at Aalborg University Esbjerg, and seen that the mounted locks are the most commonly used locks in our sample. Besides seeing how popular the mounted lock is, we have also seen how the chain locks are used in an ineffective manner. The reason for this is that most of the bicycles are not equipped with locks able to secure themselves to the surroundings, since the most common type is the mounted lock.
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.1]{images/level2.png}
+	\caption{Flowchart of the prototype idea.}
+	\label{fig:level2}
+\end{figure}
 
-%The processing unit of our locking system will be a micro-controller, this micro-controller will handle the different inputs and outputs from the various components.
-%To create a working locking solution that will work in practice we will be using a 12V or 24V solenoid. The solenoid will be the electrical component that moves a pin, so that the lock is electro-mechanically locked and unlock. 
-%Micro-controllers do not output a high enough voltage and a current to drive a solenoid, therefore we will need to work around this by using a relay. The relay will be used as an electrical switch controlled by the micro-controller to turn the solenoid on and off.
+On this flowchart you can see how we expend from the level 1 flowchart in chapter 1.
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=.1]{images/level3.png}
+	\caption{Flowchart of the prototype idea.}
+	\label{fig:level3}
+\end{figure}
+
+On this flowchart you can see how we expend from the level 1 flowchart in chapter 1.
+
 \clearpage
