--- a/report/sections/ch1-intro.tex
+++ b/report/sections/ch1-intro.tex
@@ -20,16 +20,11 @@ Furthermore we decided to expand upon the problem-domain we set for ourselves an
 
 \begin{figure}[!h]
 	\centering
-	\includegraphics[scale=.7]{images/low-level-block.pdf}
-	\caption{Low-level block diagram expanding upon the common theme we found}
-	\label{fig:lowlevelblock}
-\end{figure}
-
-We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
-
-\begin{figure}[!h]
-	\centering
 	\includegraphics[scale=.1]{images/level1.png}
 	\caption{Flowchart of our first main ideas}
 	\label{fig:level1}
 \end{figure}
+
+In this flowchart you can see the different approaches we can take to map different unknown terrains.
+
+We decided to continue on with the selected problem-domain and started using a W-diagram model to expand upon it further and to identify the parts needed to be researched. This method will help us to come up with a solution to the problem at hand.
