--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -17,7 +17,7 @@ This section outlines the requirements for both the prototype that we are aiming
 	
 \end{enumerate}
 
-\subsection{Testing}
+\subsection{Testing requirements}
 
 \begin{enumerate}
 	
