--- a/report/sections/ch2-stakeholder-analysis.tex
+++ b/report/sections/ch2-stakeholder-analysis.tex
@@ -24,7 +24,7 @@ Technology carriers are a subset of \textit{Actors} who have influence to change
 %TODO: Revise the two definitions above: Actors and Technology Carriers. Make sure they are correct.
 
 \subsubsection{Danish Explosive Ordnance Disposal squad} 
-Also known as \textit{Ammunitionsrydningstjenesten} or \textit{EOD} in Danish, refers to the Danish bomb disposal squad\cite{EOD}. They are the one called in for emergency situations or bomb scares, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
+Also known as \textit{Ammunitionsrydningstjenesten} in Danish or \textit{EOD} for short, refers to the Danish bomb disposal squad\cite{EOD}. They are the one called in for emergency situations or bomb scares, where they use robots to map the area and find the possible suspicious items to investigate. The function of this squad is very crucial to the Danish Army, as these men and women need special training and education to work with these tools and technologies to ensure the public safety in these special cases. The interest that the Danish EOD squad would have in this project would be in regards of mapping technology and autonomous navigation in unknown terrains. Such technology could be used on rovers that bomb squads generally use for going in to building to find possible threats and to investigate it. This could mean they would have possible interest in the development, customization of the project to their needs and even financial interest. They are also considered as a potential users and carriers of this technology.
 
 \subsubsection{Group H103}	
 Group H103 is the group who develops the solution for this project. The group consists of:
