lowecase macros and hypenations

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -1,6 +1,6 @@
 \input{setup/Preamble.tex}
-\input{setup/Hyphenations.tex}
-\input{setup/Macros.tex}
+\input{setup/hyphenations.tex}
+\input{setup/macros.tex}
 
 \begin{document}
 \sloppy
