--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -8,7 +8,7 @@ This section outlines the requirements for both the prototype that we are aiming
 	
 	\item The rover should be remotely controlled.
 	\item The rover should be autonomous.
-	\item From the laser sensor we can make a 2D map of the surroundings.
+	\item The laser sensor should produce a 2D map of the surroundings.
 	\item Running a Raspberry Pi that controlled mapping and navigation at the same time.
 	\item The program should be written in Python.
 	\item The system should include a laser sensor.
@@ -22,9 +22,9 @@ This section outlines the requirements for both the prototype that we are aiming
 \begin{enumerate}
 	
 	\item The rover can be controlled using a remote.
-	\item The rover should navigate autonomous through a maze.
+	\item The rover should navigate autonomously through a maze.
 	\item The laser sensor should make a usable 2D map of its surroundings.
 	
 \end{enumerate}
 
-These criteria will be used to design, implement and test our implementation of the prototype later on. These requirements will be re-evaluated in the \textit{Discussion} section.
+These criteria will be used to design, build, and test our implementation of the prototype. These requirements will be re-evaluated in the \textit{Discussion} section.
