--- a/report/sections/ch3-problemdelimitation.tex
+++ b/report/sections/ch3-problemdelimitation.tex
@@ -1,5 +1,5 @@
 \section{Problem Delimitation}
-Based on previous discussions, the following pieces have been selected:
+Based on previous discussions, the following equipment has been selected:
 
 \begin{description}
   \item[Rover:] \hfill \\
@@ -19,7 +19,7 @@ Based on previous discussions, the following pieces have been selected:
 \subsection{Prototype}
 The main limiting-factor for us is time. In the time-frame of this project, we cannot build a full-scope product. Finding all the parts, ordering, and assembling them completely would take too long to complete. Furthermore, we do not have the tools or place to build a full-scope product, either. Hence we will build a prototype as a proof of concept.
 
-For the prototype, we decided to use a laser for making a 2D map as a proof of concept, but the capability of implementing cameras for 3D mapping. A laser can be used for 3D mapping, but it would be easier to make a 3D map from cameras and it would also give you a better picture of the surroundings.
+For the prototype, we decided to use a laser for making a 2D map as a proof of concept, but the capability of implementing cameras for 3D mapping. A laser can be used for 3D mapping, but it would be easier to make a 3D map from cameras and it would also give a better picture of the surroundings.
 
 Implementation of a optical flow sensor is for reference points. We will be using Simultaneous Localization and Mapping (SLAM) system for the mapping. The laser will be mounted on top and spin 360$^[\cicl]$ using a brushless DC motor. The optical flow will tell the system about the movement of the rover on a XY grid. 
 
