--- a/report/sections/ch3-requirements.tex
+++ b/report/sections/ch3-requirements.tex
@@ -9,11 +9,11 @@ This section outlines the requirements for both the prototype that we are aiming
 	\item The rover should be remotely controlled.
 	\item The rover should be autonomous.
 	\item The laser sensor should produce a 2D map of the surroundings.
-	\item Running a Raspberry Pi that controlled mapping and navigation at the same time.
+	\item Running a Raspberry Pi that controls mapping and navigation asynchronously.
 	\item The program should be written in Python.
 	\item The system should include a laser sensor.
-	\item The system should include an ultrasonic-sensor.
- 	\item The prototype should be capable of implementing an 3D mapping sensor without much change.
+	\item The system should include an optical flow sensor.
+ 	\item The prototype should be capable of implementing an 3D mapping sensor without much change. %TODO: Too broad in my opinion. 
 	
 \end{enumerate}
 
@@ -21,8 +21,8 @@ This section outlines the requirements for both the prototype that we are aiming
 
 \begin{enumerate}
 	
-	\item The rover can be controlled using a remote.
-	\item The rover should navigate autonomously through a maze.
+	\item The rover can be controlled using a remote device.
+	\item The rover should navigate autonomously through a maze. %TODO: How do WE define a maze?
 	\item The laser sensor should make a usable 2D map of its surroundings.
 	
 \end{enumerate}
