--- a/report/sections/ch2-preliminary-research.tex
+++ b/report/sections/ch2-preliminary-research.tex
@@ -29,7 +29,7 @@ To make a 2D or 3D map, a reference point is needed. It can be GPS positions of 
 
 \subsection{SLAM}
 
-Simultaneous Localization and Mapping (SLAM) is a system where you take multiple measurements of a surrounding and add them all together to make a 2D or 3D map. Need to add more here
+Simultaneous Localization and Mapping (SLAM) is a particular method used to construct maps. In SLAM, the mapping device maps its environment whilst simultaniously keeping track of its location within that map, hence the name. SLAM is used mostly in autonomous vehicles that need to traverse some terrain without any prior information about it. More precisely, SLAM is a combination of algorithms, most notably Kalman filtering, that all relate to either mapping or navigation. The specifics of these algorithms are too complex for the purpose and timescale of this project.
 
 \subsection{Sensors}
 \subsubsection{Pressure Based}
