REALLY rough. I haven't spellchecked yet

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -57,6 +57,8 @@
 
 \input{sections/ch4-description.tex}
 
+\input{sections/ch4-ultrasonic.tex}
+
 %\input{sections/ch4-design.tex}
 
 %\input{sections/ch4-specifications.tex}
