--- a/report/citations.bib
+++ b/report/citations.bib
@@ -298,3 +298,20 @@
 	howpublished = "\url{http://forsvaret.dk/FKO/ENG/FACTS%20AND%20FIGURES/AIM%20AND%20TASKS/Pages/default.aspx}"
 }
 
+%-------------------------------------------------------
+%development
+
+@MISC{ultrasonichowitworks,
+	title = {HC-SR04 Ultrasonic Distance Sensor},
+	howpublished = "\url{http://arcbotics.com/products/hc-sr04-ultrasonic-distance-sensor/}"
+}
+
+@MISC{hcsr40datesheet,
+	title = {HC-SR04 Ultrasonic Distance Sensor - Datasheet},
+	howpublished = "\url{http://www.micropik.com/PDF/HCSR04.pdf}"
+}
+
+@MISC{hcsr04timingchart,
+	title = {HC-SR04 Ultrasonic Distance Sensor - Timing Chart},
+	howpublished = "\url{http://www.ezdenki.com/graphics/hc-sr04-timing-chart.png}"
+}
