Adding some more stuff (Still a WIP)

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -59,6 +59,8 @@
 
 \input{sections/ch4-ultrasonic.tex}
 
+\input{sections/ch4-build.tex}
+
 %\input{sections/ch4-design.tex}
 
 %\input{sections/ch4-specifications.tex}
