--- a/report/citations.bib
+++ b/report/citations.bib
@@ -315,3 +315,8 @@
 	title = {HC-SR04 Ultrasonic Distance Sensor - Timing Chart},
 	howpublished = "\url{http://www.ezdenki.com/graphics/hc-sr04-timing-chart.png}"
 }
+
+@MISC{lidarenclosure,
+	title = {360 Degree LIDAR-Lite Scanner},
+	howpublished = "\url{https://hackaday.io/project/4087-360-degree-lidar-lite-scanner}"
+}
