--- a/report/sections/appendix.tex
+++ b/report/sections/appendix.tex
@@ -1,1 +1,17 @@
-appendix
+\section{Code for close proximity detection}
+\lstinputlisting[firstline=1, lastline=55, title=ultrasonic.py,language=Python]{../code/ultrasonic-module/ultrasonic.py}
+
+\begin{table}[H]
+\centering
+\begin{tabular}{|l|l|}
+\hline
+\textbf{Name}        & \textbf{HC-SR04} \\ \hline
+Operating Voltage    & DC-5V                              \\ \hline
+Operating Current    & 15mA                               \\ \hline
+Operating Frequency  & 40KHZ                              \\ \hline
+Range                & 2-400cm                            \\ \hline
+Input trigger signal & 10us pulse                         \\ \hline
+Measuring angle      & 15 degree                          \\ \hline
+\end{tabular}
+\caption{Information from the datasheet\cite{hcsr40datesheet}}
+\end{table}
