--- a/report/sections/ch4-description.tex
+++ b/report/sections/ch4-description.tex
@@ -1,3 +1,9 @@
 \section{Description}
 
 Description and following chapters 
+
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=1\linewidth]{images/prototype-diagram.jpg}
+	\caption{INSERT SOMETHING HERE}
+\end{figure}
