--- a/report/sections/titlepage.tex
+++ b/report/sections/titlepage.tex
@@ -1,7 +1,7 @@
 \pdfbookmark[0]{English title page}{label:titlepage_en}
 \aautitlepage{%
   \englishprojectinfo{
-    Mapping and navigation of unknown terrain
+    Mapping and navigation\\ of unknown terrain
   }{%
     Scientific Theme %theme
   }{%
