--- a/report/sections/ch4-description.tex
+++ b/report/sections/ch4-description.tex
@@ -1,9 +1,9 @@
 \section{Description}
 
-Description and following chapters 
-
+%TODO: Add some desciption to the figure below
 \begin{figure}[H]
 	\centering
-	\includegraphics[width=1\linewidth]{images/prototype-diagram.jpg}
-	\caption{INSERT SOMETHING HERE}
+	\includegraphics[scale=.7]{images/developmentdiagram.pdf}
+	\caption{Diagram of modules we are developing}
+	\label{fig:developmentdiagram}
 \end{figure}
