--- a/report/sections/ch4-build.tex
+++ b/report/sections/ch4-build.tex
@@ -5,7 +5,7 @@
 	\centering
 	\includegraphics[width=.4\linewidth]{images/chassis.jpg}
 \end{figure}
-%Write about choice of chasis
+%TODO: Write about choice of chasis
 
 To attach the different sensors to the rover, different enclosures and brackets were needed. For the ultrasonic sensors, two different kind of brackets have been designed, since the main chassis required them to be mounted differently based on their placement on each of the four sides. Using Autodesk Inventor the two enclosures for the ultrasonic sensors have been modelled and 3d-printed.
 
@@ -23,9 +23,29 @@ To attach the different sensors to the rover, different enclosures and brackets 
 
 The enclosures for the ultrasonic sensors have be designed to place all of the sensors at the same height on each side of the chassis, to ensure that the measurements are similar.
 
-%Add pictures of the mounted sensors
+%TODO: Add pictures of the mounted sensors
 
-The design for the Lidar enclosure was found on the internet, which was already made by someone who had created a similar project. The reasoning behind using that specific design is that flawlessly allows the Lidar to rotate 360degrees using the same components.\cite{lidarenclosure}.
-%further description of the lidar set-up needed
+The design for the Lidar laser enclosure was found on the internet, which was already made by someone, who had created a similar project. The enclosure enables the sensor to rotate 360degrees using 3D printed gears driven by a stepper motor.\cite{lidarenclosure}.
 
-%Add pictures of the lidar enclosure
+The enclosure design required a high-end 3D printer due to it's size and print time. The prints were completed within a day.
+
+\begin{figure}[H]
+	\centering
+	\begin{subfigure}[H]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/lidarcase-base.png}
+	\end{subfigure}%
+	\quad
+	\begin{subfigure}[H]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/lidarcase-mount.png}
+	\end{subfigure}
+	\newline
+	\begin{subfigure}[H]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/lidarcase-bracket.png}
+	\end{subfigure}
+	\quad
+	\begin{subfigure}[H]{0.4\textwidth}
+		\includegraphics[width=\textwidth]{images/lidarcase-steppergear.png}
+	\end{subfigure}
+	\caption{The enclosures used for rotating the }
+\end{figure}
+%TODO: further description of the lidar set-up needed
