Added more chapters to Development

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -57,7 +57,11 @@
 
 \input{sections/ch4-description.tex}
 
+\input{sections/ch4-controller.tex}
+
 \input{sections/ch4-ultrasonic.tex}
+
+\input{sections/ch4-laser.tex}
 
 \input{sections/ch4-build.tex}
 
