--- a/report/sections/ch4-build.tex
+++ b/report/sections/ch4-build.tex
@@ -46,6 +46,9 @@ The enclosure design required a high-end 3D printer due to it's size and print t
 	\begin{subfigure}[H]{0.4\textwidth}
 		\includegraphics[width=\textwidth]{images/lidarcase-steppergear.png}
 	\end{subfigure}
-	\caption{The enclosures used for rotating the }
+	\caption{Parts of the enclosure used for rotating the LIDAR laser sensor}
 \end{figure}
-%TODO: further description of the lidar set-up needed
+
+The idea of using a separate enclosure driven by a stepper motor to rotate the laser sensor is to constantly get a 360 degree map of the environment by rotating the sensor separately from the chassis, rather than rotating the chassis to do so. This way, we can also keep regenerating the map while the chassis is on the move.  The idea behind a stepper motor is that it is possible to get the exact step to a full-circle.
+
+%TODO: Write about assembly
