testing chapter added

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -71,7 +71,7 @@
 
 %\input{sections/ch4-documentation.tex}
 
-%\input{sections/ch4-testing.tex}
+\input{sections/ch4-testing.tex}
 
 %Chapter 5  -----------
 \clearpage
