--- a/report/sections/ch4-testing.tex
+++ b/report/sections/ch4-testing.tex
@@ -1,28 +1,24 @@
 \section{Testing}
 
-Things needed to be tested for the prototype:
+To ensure that our prototype fulfills every requirements we set up in Chapter 3, we set up some testing scenarios, which we used to test the functionalities of our prototype. This scenario is made out of a maze/location like this
 
-\begin{enumerate}
-	
-	\item The lock fits in well into the locking case.\\
-		- The first test was to check the length of the chain and how well the lock fits into the locking enclosure.\\
-	\item The touch sensor detects the lock.\\
-		- The locking device and the plug worked well together and the sensor correctly indicated that the plug had been inserted into the enclosure.\\
-	\item The screen will show the right text on each step.\\
-		- The LCD starts with scrolling a welcome message. \\
-		- The LCD indicates an error message to unsaved cards.\\
-		- The LCD displays a message when a plug is put in the locking case and asks for an RFID.\\
-		- The LCD displays a message when an RFID tag has been saved and tells the user that the lock is locked.\\
-		- The LCD displays a message when the user scans an RFID tag and opens the lock.\\
-	\item Only one card is associated with the lock at a time.\\
-		- When a non-saved card is used by the system in gives and error message.\\
-		- The system only saved a card when a lock is locked and deletes it when it's opened.\\
-	\item Our student cards can operate the device.\\
-		- We tested our Aalborg University's student cards and they worked.\\
-	\item The controller correctly detects the RFID-enabled card.\\
-		- We tested 4 different types of RFID cards that we had on hand. Two came with the RFID reader. One was a danish travel card and the last one a AAU student card.\\
-	
-\end{enumerate}
+[top-view of maze/room here]
+
+%TODO: Create top-view of room and conclude of test
+
+%TODO: Show test findings
+
+Therefore we can conclude that the test requirements set previously are all passed.
+
+\begin{table}[H]
+	\begin{tabular}{|l|l|}
+		\hline
+		\textbf{Requirement} & \textbf{Test} \\ \hline
+		The rover can be controlled using a remote device. & PASSED/FAILED \\ \hline
+		The rover should navigate autonomously through a maze. & PASSED/FAILED \\ \hline
+		The laser sensor should make a usable 2D map of its surroundings. & PASSED/FAILED \\ \hline
+	\end{tabular}
+\end{table}
 
 
 
