Added the skeletons for my sections

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -65,6 +65,10 @@
 
 \input{sections/ch4-build.tex}
 
+\input{sections/ch4-slipring.tex}
+
+\input{sections/ch4-dcmotorcontroller.tex}
+
 %\input{sections/ch4-design.tex}
 
 %\input{sections/ch4-specifications.tex}
