--- a/report/sections/ch4-testing.tex
+++ b/report/sections/ch4-testing.tex
@@ -1,3 +1,4 @@
+\clearpage
 \section{Testing}
 
 To ensure that our prototype fulfills every requirements we set up in Chapter 3, we set up some testing scenarios, which we used to test the functionalities of our prototype. This scenario is made out of a maze/location like this
