Still needs further expansion

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -320,3 +320,13 @@
 	title = {360 Degree LIDAR-Lite Scanner},
 	howpublished = "\url{https://hackaday.io/project/4087-360-degree-lidar-lite-scanner}"
 }
+
+@MISC{slipring,
+	title = {Slip ring datasheet - SNM022A-06},
+	howpublished = "\url{https://cdn.sparkfun.com/datasheets/Robotics/SNM022A-06%20update.pdf}"
+}
+
+@MISC{sabertoothpic,
+	title = {Sabertooth picture},
+	howpublished = "\url{http://www.dimensionengineering.com/products/sabertooth2x5}"
+}
