--- a/report/citations.bib
+++ b/report/citations.bib
@@ -330,3 +330,14 @@
 	title = {Sabertooth picture},
 	howpublished = "\url{http://www.dimensionengineering.com/products/sabertooth2x5}"
 }
+
+
+@MISC{steppermotor,
+	title = {NEMA-17 Bipolar Stepper Motor Datasheet},
+	howpublished = "\url{http://www.robotshop.com/media/files/pdf/datasheet-324.pdf}"
+}
+
+@MISC{steppercontroller,
+	title = {EeasyDriver Stepper Motor Controller Datasheet},
+	howpublished = "\url{https://cdn.sparkfun.com/datasheets/Robotics/A3967-Datasheet.pdf}"
+}
