--- a/report/sections/stepper-motor.tex
+++ b/report/sections/stepper-motor.tex
@@ -5,7 +5,7 @@ Stepper motors are usually used with a specific circuit to control them, a stepp
 
 The stepper motor we used in our project is NEMA-17 Bipolar Stepper Motor.
 Step: 1.8deg
-(datasheet: http://www.robotshop.com/media/files/pdf/datasheet-324.pdf)
-
+\cite{steppermotor}
 The stepper motor controller we used is an EasyDriver
-(datasheet: https://cdn.sparkfun.com/datasheets/Robotics/A3967-Datasheet.pdf)
+\cite{steppercontroller}
+(Image: how we connected the stepper motor and its controller)
