fixed and added citations

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -222,6 +222,13 @@
     howpublished = "\url{http://web.ist.utl.pt/ist12219/data/43.pdf}"
 }
 
+@MISC{snell,
+    author = {Wolf, K. B.},
+    title = {Geometry and dynamics in refracting systems},
+    year = {1995},
+    howpublished = "European Journal of Physics 16: 14–20."
+}
+
 @MISC{barometric2,
     author = {Gerhard Gerlich, Ralf D. Tscheuschner},
     title = {On The Barometric Formulas And Their Derivation From Hydrodynamics and Thermodynamics},
@@ -338,6 +345,14 @@
 }
 
 @MISC{steppercontroller,
-	title = {EeasyDriver Stepper Motor Controller Datasheet},
+	title = {EasyDriver Stepper Motor Controller Datasheet},
 	howpublished = "\url{https://cdn.sparkfun.com/datasheets/Robotics/A3967-Datasheet.pdf}"
+}
+@MISC{rangefinderIMG,
+	title = {Rangefinder Picture},
+	howpublished = "\url{http://i.stack.imgur.com/Jg1nW.jpg}"
+}
+@MISC{refractionIMG,
+	title = {Refraction Picture},
+	howpublished = "\url{http://4.bp.blogspot.com/-Y4zXYZDJekI/Ud5C-rzi_0I/AAAAAAAACSc/EYYxL9cmy3M/s1600/Picture18.png}"
 }
