--- a/report/sections/ch2-theory_Gustavo.tex
+++ b/report/sections/ch2-theory_Gustavo.tex
@@ -20,7 +20,8 @@ The pulse will travel from the rangefinder, straight to whatever object is in fr
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.4\linewidth]{images/rangefinder.jpg}
-        %http://i.stack.imgur.com/Jg1nW.jpg
+        \caption{A slightly more complex laser rangefinder.}
+        \label{fig:rangefinderIMG}
 \end{figure}
 
 This requires the rangefinder to know what the speed of the pulse is, which is a problem in unknown environments. For a rangefinder to be reliably used in such environments, it needs either to have the speed of its pulse precalculated, or it needs to measure the speed of the pulse by itself. Also, in situations where the speed of the pulse varies, a rangefinder is either not useful, or it needs a more complicated model of the environment it is in.
@@ -29,11 +30,12 @@ The main cause for a pulse to travel at a different speed than expected is in si
 
 Sound moves faster through denser mediums, where light travels slower. The speed of light is less affected by density than sound is. In earth-like atmospheres, light only travels 0.03\% slower in air when compared to the vacuum.\cite{refraction}\cite{speedOfSound}.
 
-Another issue in environments with a high variation in density is refraction. Refraction is a phenomenon that occurs when a wave switches between mediums where it travels at different speeds. This change in mediums causes the wave to change it's direction. cite{snell:Wolf, K. B. (1995), "Geometry and dynamics in refracting systems", European Journal of Physics 16: 14–20.} Refraction would cause rangefinders to become effectively blind, as neither their direction nor the length measured can be trusted.
+Another issue in environments with a high variation in density is refraction. Refraction is a phenomenon that occurs when a wave switches between mediums where it travels at different speeds. This change in mediums causes the wave to change it's direction. \cite{snell} Refraction would cause rangefinders to become effectively blind, as neither their direction nor the length measured can be trusted.
 %A cite needs to be fixed above - Thomas
 \begin{figure}[H]
 	\centering
 	\includegraphics[width=.4\linewidth]{images/refraction.png}
-        %http://4.bp.blogspot.com/-Y4zXYZDJekI/Ud5C-rzi_0I/AAAAAAAACSc/EYYxL9cmy3M/s1600/Picture18.png
+        \caption{An illustration of refraction into a denser medium.}
+        \label{fig:refractionIMG}
 \end{figure}
 
