--- a/report/sections/stepper-motor.tex
+++ b/report/sections/stepper-motor.tex
@@ -9,3 +9,5 @@ Step: 1.8deg
 The stepper motor controller we used is an EasyDriver
 \cite{steppercontroller}
 (Image: how we connected the stepper motor and its controller)
+
+Since the stepper motor we use divides a full cycle into 200 steps, this means that the maximum resulustion possible is 1.8 degrees. At a dictance of 1m, 1.8degrees can resolve a distance of ~3.1cm, and this increases linearly with a larger distance.
