--- a/report/sections/stepper-motor.tex
+++ b/report/sections/stepper-motor.tex
@@ -11,3 +11,7 @@ The stepper motor controller we used is an EasyDriver
 (Image: how we connected the stepper motor and its controller)
 
 Since the stepper motor we use divides a full cycle into 200 steps, this means that the maximum resulustion possible is 1.8 degrees. At a dictance of 1m, 1.8degrees can resolve a distance of ~3.1cm, and this increases linearly with a larger distance.
+
+$\frac{x}{sin(1.8deg)} = \frac{1m}{sin(89.1deg)}$
+$x = \frac{sin(1.8deg)}{sin(89.1deg)}m$
+$x = 3.14cm$
