--- a/report/P2.tex
+++ b/report/P2.tex
@@ -61,6 +61,8 @@
 
 \input{sections/ch4-ultrasonic.tex}
 
+\input{sections/ch4-Opticalflow.tex}
+
 \input{sections/ch4-laser.tex}
 
 \input{sections/ch4-build.tex}
