Made some changes

--- a/report/citations.bib
+++ b/report/citations.bib
@@ -334,10 +334,14 @@
 }
 
 @MISC{sabertoothpic,
-	title = {Sabertooth picture},
+	title = {Sabertooth picture 2x5},
 	howpublished = "\url{http://www.dimensionengineering.com/products/sabertooth2x5}"
 }
 
+@MISC{sabertoothdata,
+	title = {Sabertooth 2x5 Datasheet},
+	howpublished = "\url{http://www.dimensionengineering.com/datasheets/Sabertooth2x5.pdf}"
+}
 
 @MISC{steppermotor,
 	title = {NEMA-17 Bipolar Stepper Motor Datasheet},
