--- a/report/sections/ch4-Opticalflow.tex
+++ b/report/sections/ch4-Opticalflow.tex
@@ -1,3 +1,4 @@
+\clearpage
 \section{Optical flow sensor}
 
 Optical flow sensor uses a camera to detect motion on a x and y scale. It looks for movement by finding patterns in the ground it is looking at to being able to determine in what direction and how far the rover has travelled. This is vital information for SLAM mapping. and is used for finding the next reference point. The sensor is placed high on the rover to get a bigger view of the ground and is faced downwards to the ground.
