added to main file

--- a/report/P2.tex
+++ b/report/P2.tex
@@ -71,6 +71,8 @@
 
 \input{sections/ch4-dcmotorcontroller.tex}
 
+\input{section/ch4-stepper.tex}
+
 %\input{sections/ch4-design.tex}
 
 %\input{sections/ch4-specifications.tex}
